# dataflix

./: .env  .gitignore  ARCHITECTURE.md  Dockerfile  ML_GUIDE.md  README.md  check_all_works.py  docker-compose.yml  pyproject.toml  run.sh  stop.sh
airflow/: Dockerfile  requirements.txt
airflow/dags/: elt_pipeline.py
backend/: app.py  requirements.txt
cli/: main.py
clickhouse/init/: 01-init-databases.sql  02-init-tables.sql
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml  webhook_server.py
dbt/models/marts/: mart_movies.sql  mart_ratings_aggregated.sql  mart_user_movie_matrix.sql  mart_users.sql
dbt/models/staging/: stg_movies.sql  stg_ratings.sql  stg_users.sql  stg_watched_movies.sql
mlflow/: Dockerfile  start_services.sh  train_model.py  training_server.py
postgres/init/: 01-init-schema.sql  02-seed-data.sql
scripts/: setup_superset_dataflix.py
superset/: Dockerfile
superset/config/: superset_config.py
