[project]
name = "dataflix"
version = "0.1.0"
description = "Dataflix - Movie Recommendation System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "clickhouse-driver>=0.2.6",
    "psycopg2-binary>=2.9.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "scripts", "backend", "airflow", "mlflow", "superset"]

